Nav items wrap fixed

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -72,7 +72,7 @@
   display: none;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 850px) {
   .nav_items {
     position: absolute;
     padding-top: 10px;
